# FreeCAD

./: .gitmodules  CMakeLists.txt
cMake/: 110src-app.patch
cMake/FreeCAD_Helpers/: SetupBoost.cmake  SetupLibFmt.cmake  SetupQt.cmake
package/WindowsInstaller/lang/: tranditionalchinese.nsh
package/fedora/: FreeCAD.spec
src/: CMakeLists.txt
src/App/Resources/translations/: App_zh-TW.qm  App_zh-TW.ts
src/Base/: Console.h
src/Base/Resources/: translations.qrc
src/Base/Resources/translations/: Base_zh-TW.qm  Base_zh-TW.ts
src/Doc/: CONTRIBUTORS  LICENSE.html
src/Ext/freecad/: CMakeLists.txt
src/Gui/: AboutApplication.ui
src/Gui/Dialogs/: AboutApplication.ui
src/Gui/Icons/: freecad.xpm
src/Gui/Language/: FreeCAD_zh-TW.qm  FreeCAD_zh-TW.ts  qt_zh_TW.qm  qtwebengine_zh_TW.qm
src/Mod/: CMakeLists.txt
src/Mod/AddonManager/Resources/translations/: AddonManagerOrg.ts  AddonManager_zh-TW.po  AddonManager_zh-TW.qm  AddonManager_zh-TW.ts  title.ts  update.sh
src/Mod/Arch/Resources/translations/: Arch_zh-TW.po  Arch_zh-TW.qm  Arch_zh-TW.ts  title.ts  update.sh
src/Mod/Assembly/: CommandCreateBom.py  InitGui.py
src/Mod/Assembly/Gui/: CMakeLists.txt
src/Mod/Assembly/Gui/Resources/: Assembly.qrc
src/Mod/Assembly/Gui/Resources/translations/: Assembly_zh-TW.qm  Assembly_zh-TW.ts
src/Mod/BIM/: CMakeLists.txt  InitGui.py
src/Mod/BIM/Resources/translations/: Arch_zh-TW.qm  Arch_zh-TW.ts
src/Mod/CAM/: InitGui.py
src/Mod/CAM/Gui/: CMakeLists.txt
src/Mod/CAM/Gui/Resources/: Path.qrc
src/Mod/CAM/Gui/Resources/translations/: CAM_zh-TW.qm  CAM_zh-TW.ts
src/Mod/CAM/Path/Base/Gui/: PreferencesAdvanced.py
src/Mod/CAM/Path/Main/Gui/: PreferencesJob.py
src/Mod/Cloud/: InitGui.py
src/Mod/Cloud/App/: AppCloud.cpp
src/Mod/Cloud/Gui/: CMakeLists.txt
src/Mod/Cloud/Gui/Resources/translations/: Cloud_zh-TW.qm  Cloud_zh-TW.ts
src/Mod/Draft/: CMakeLists.txt  InitGui.py
src/Mod/Draft/Resources/translations/: Draft_zh-TW.po  Draft_zh-TW.qm  Draft_zh-TW.ts  title.ts  update.sh
src/Mod/Drawing/Gui/Resources/translations/: Drawing_zh-TW.po  Drawing_zh-TW.qm  Drawing_zh-TW.ts  title.ts  update.sh
src/Mod/Fem/: CMakeLists.txt  InitGui.py
src/Mod/Fem/App/: CMakeLists.txt
src/Mod/Fem/Gui/: CMakeLists.txt
src/Mod/Fem/Gui/Resources/translations/: Fem_zh-TW.po  Fem_zh-TW.qm  Fem_zh-TW.ts  title.ts  update.sh
src/Mod/Help/: Help.py  InitGui.py
src/Mod/Help/Resources/translations/: Help_zh-TW.qm  Help_zh-TW.ts
src/Mod/Import/: InitGui.py
src/Mod/Import/Gui/: CMakeLists.txt
src/Mod/Import/Gui/Resources/translations/: Import_zh-TW.qm  Import_zh-TW.ts
src/Mod/Inspection/: InitGui.py
src/Mod/Inspection/Gui/Resources/translations/: Inspection_zh-TW.po  Inspection_zh-TW.qm  Inspection_zh-TW.ts  title.ts  update.sh
src/Mod/Material/: CMakeLists.txt  InitGui.py
src/Mod/Material/Gui/Resources/: Material.qrc
src/Mod/Material/Gui/Resources/translations/: Material_zh-TW.ts
src/Mod/Material/Resources/Materials/Appearance/: Steel.FCMat
src/Mod/Material/Resources/translations/: Material_zh-TW.po  Material_zh-TW.qm  Material_zh-TW.ts  title.ts  update.sh
src/Mod/Measure/: InitGui.py
src/Mod/Measure/Gui/Resources/translations/: Measure_zh-TW.ts
src/Mod/Measure/Resources/: Measure.qrc
src/Mod/Mesh/: InitGui.py
src/Mod/Mesh/Gui/Resources/translations/: Mesh_zh-TW.po  Mesh_zh-TW.qm  Mesh_zh-TW.ts  title.ts  update.sh
src/Mod/MeshPart/: InitGui.py
src/Mod/MeshPart/Gui/Resources/translations/: MeshPart_zh-TW.po  MeshPart_zh-TW.qm  MeshPart_zh-TW.ts  title.ts  update.sh
src/Mod/OpenSCAD/: InitGui.py
src/Mod/OpenSCAD/Resources/translations/: OpenSCAD_zh-TW.po  OpenSCAD_zh-TW.qm  OpenSCAD_zh-TW.ts  title.ts  update.sh
src/Mod/Part/: InitGui.py
src/Mod/Part/App/: PartFeature.cpp  PartFeature.h
src/Mod/Part/Gui/Resources/translations/: Part_zh-TW.po  Part_zh-TW.qm  Part_zh-TW.ts  title.ts  update.sh
src/Mod/PartDesign/: InitGui.py
src/Mod/PartDesign/Gui/Resources/translations/: PartDesign_zh-TW.po  PartDesign_zh-TW.qm  PartDesign_zh-TW.ts  title.ts  update.sh
src/Mod/PartDesign/WizardShaft/: WizardShaft.py
src/Mod/Path/Gui/Resources/translations/: Path_zh-TW.po  Path_zh-TW.qm  Path_zh-TW.ts  title.ts  update.sh
src/Mod/Points/: InitGui.py
src/Mod/Points/Gui/Resources/translations/: Points_zh-TW.po  Points_zh-TW.qm  Points_zh-TW.ts  update.sh
src/Mod/ReverseEngineering/: InitGui.py
src/Mod/ReverseEngineering/Gui/Resources/translations/: ReverseEngineering.pot  ReverseEngineering_zh-TW.po  ReverseEngineering_zh-TW.qm  ReverseEngineering_zh-TW.ts  ReverseEngineering_zh_TW.po  title.ts  update.sh
src/Mod/Robot/: InitGui.py
src/Mod/Sandbox/: InitGui.py
src/Mod/Sandbox/Gui/Resources/: Sandbox.qrc
src/Mod/Sketcher/: InitGui.py
src/Mod/Sketcher/Gui/: TaskSketcherSolverAdvanced.ui
src/Mod/Spreadsheet/: InitGui.py
src/Mod/Surface/: InitGui.py
src/Mod/Surface/Gui/: CMakeLists.txt  TaskFilling.ui
src/Mod/TechDraw/: InitGui.py
src/Mod/TechDraw/LineGroup/: LineGroup.csv
src/Mod/TemplatePyMod/: CMakeLists.txt  Commands.py  InitGui.py
src/Mod/TemplatePyMod/Gui/Resources/: TemplatePyMod.qrc
src/Mod/TemplatePyMod/Gui/Resources/translations/: TemplatePyMod_zh-TW.ts  TemplatePyMod_zh_TW.ts
src/Mod/TemplatePyMod/Resources/translations/: TemplatePyMod_zh-TW.qm  TemplatePyMod_zh-TW.ts
src/Mod/Test/: InitGui.py
src/Mod/Tux/Resources/translations/: Tux.pot  Tux_zh-TW.po  Tux_zh-TW.qm  Tux_zh-TW.ts  update.sh
src/Mod/Web/: CMakeLists.txt
src/Mod/Web/Gui/: CMakeLists.txt
src/Mod/Web/Gui/Resources/translations/: Web_zh-TW.po  Web_zh-TW.qm  Web_zh-TW.ts  update.sh
src/Tools/_TEMPLATEPY_/: CMakeLists.txt  InitGui.py
src/Tools/_TEMPLATEPY_/Resources/: _TEMPLATEPY_.qrc
src/Tools/_TEMPLATEPY_/Resources/translations/: _TEMPLATEPY__zh-TW.ts  _TEMPLATEPY__zh_TW.ts
src/Tools/_TEMPLATE_/: InitGui.py
src/XDGData/: org.freecad.FreeCAD.desktop  org.freecad.FreeCAD.metainfo.xml.in  org.freecadweb.FreeCAD.desktop
(+54 files in other folders)
